# uri2flow

./: CHANGELOG.md  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  goal.yaml  planfile.yaml  pyproject.toml
examples/33_office_workflows/: ABOUT.md
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
testql-scenarios/: generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: test_flow_defaults.py
uri2flow/: __init__.py  cli.py  resolver.py
uri2flow/loaders/: __init__.py  markpact_loader.py
