[project]
name = "uri2flow"
version = "0.1.0"
description = "Compact URI flow to workflow graph compiler for uri3/nl2uri pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0", "uri2pact"]

[project.optional-dependencies]
test = ["pytest>=8.0"]
jsonschema = ["jsonschema>=4.0"]

[project.scripts]
uri2flow = "uri2flow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
uri2pact = { git = "https://github.com/tellmesh/uri2pact.git" }
