[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uri2flow"
version = "0.1.0"
description = "Compact URI flow to workflow graph compiler for uri3/nl2uri pipelines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0", "uri2pact"]

[project.optional-dependencies]
test = ["pytest>=8.0"]
jsonschema = ["jsonschema>=4.0"]

[project.scripts]
uri2flow = "uri2flow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
uri2pact = { git = "https://github.com/tellmesh/uri2pact.git" }

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
